# harmony-glitch

./: .gitignore  CLAUDE.md  index.html  manifest  package-lock.json  package.json  test_serde.rs  tsconfig.json  vite.config.ts  vitest.config.ts
.beads/: dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl  labels.jsonl
assets/: dialogues.json  entities.json  items.json  quests.json  recipes.json  skills.json  stores.json
assets/audio/: default-kit.json
assets/music/: catalog.json
assets/sprites/avatar/: avatar.json  manifest.json
assets/sprites/items/: items.json
assets/streets/: demo_heights.xml  demo_heights_entities.json  demo_meadow.xml  demo_meadow_entities.json
docs/plans/: 2026-03-07-glitch-phase-a-plan.md  2026-03-07-glitch-resurrection-design.md  2026-03-08-phase-b-plan.md  2026-03-08-phase-b-shared-streets-design.md  2026-03-15-phase-c-items-design.md  2026-03-15-phase-c-items-plan.md  2026-03-15-street-transitions-design.md  2026-03-15-street-transitions-plan.md  2026-03-17-entity-state-cooldowns-design.md  2026-03-17-entity-state-cooldowns-plan.md  2026-03-17-swoop-overlay-design.md  2026-03-17-wall-collision-design.md  2026-03-17-wall-collision-plan.md  2026-03-18-audio-system-design.md  2026-03-18-audio-system-plan.md  2026-03-18-crafting-design.md  2026-03-18-crafting-plan.md  2026-03-18-npc-movement-design.md  2026-03-18-npc-movement-plan.md  2026-03-18-sprite-system-design.md  2026-03-18-sprite-system-plan.md  2026-03-18-swoop-overlay-plan.md  2026-04-03-avatar-system-design.md
docs/superpowers/plans/: 2026-03-24-wire-network-loop-plan.md  2026-03-25-persistence-plan.md  2026-04-02-asset-pipeline.md  2026-04-02-cas-local-storage.md  2026-04-02-custom-sound-kits.md  2026-04-02-footstep-audio.md  2026-04-02-swf-vector-rendering.md  2026-04-03-jukebox.md  2026-04-04-economy-currency-vendors.md  2026-04-05-energy-metabolics.md  2026-04-05-imagination-upgrades.md  2026-04-10-social-foundation.md  2026-04-10-social-ui-chrome.md  2026-04-16-extended-emote-system.md  2026-04-16-persistent-groups.md  2026-04-16-two-phase-party-join.md  2026-04-17-chat-slash-commands.md  2026-04-17-street-reentry.md  2026-04-18-buff-debuff-system.md
docs/superpowers/specs/: 2026-03-24-wire-network-loop-design.md  2026-03-25-persistence-design.md  2026-04-02-asset-pipeline-design.md  2026-04-02-cas-local-storage-design.md  2026-04-02-custom-sound-kits-design.md  2026-04-02-footstep-audio-design.md  (+12 more)
manifests/: items.json
scripts/: chroma-key-avatar-body.mjs  fetch-avatar-assets.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: date_util.rs  lib.rs  main.rs  persistence.rs
src-tauri/src/avatar/: types.rs
src-tauri/src/buff/: mod.rs  types.rs
src-tauri/src/emote/: cooldowns.rs  mod.rs  types.rs
src-tauri/src/engine/: arrival.rs  audio.rs  jukebox.rs  mod.rs  state.rs  transition.rs
src-tauri/src/identity/: persistence.rs
src-tauri/src/item/: crafting.rs  energy.rs  imagination.rs  interaction.rs  inventory.rs  loader.rs  mod.rs  types.rs  vendor.rs
src-tauri/src/mood/: decay.rs  mod.rs
src-tauri/src/network/: mod.rs  registry.rs  state.rs  transport.rs  types.rs
src-tauri/src/physics/: movement.rs
src-tauri/src/quest/: dialogue.rs  loader.rs  mod.rs  tracker.rs  types.rs
src-tauri/src/skill/: learning.rs  loader.rs  mod.rs  types.rs
src-tauri/src/social/: buddy.rs  groups.rs  mod.rs  party.rs  types.rs
src-tauri/src/street/: manifest.rs  mod.rs  parser.rs  types.rs  xml_helpers.rs
src-tauri/src/trade/: journal.rs  mod.rs  state.rs  types.rs
src-tauri/src/trust/: epoch.rs  gossip.rs  mod.rs  opinion.rs  policy.rs  store.rs  validator.rs
src/lib/: ipc.ts  types.ts
src/lib/engine/: audio.ts  (+7 more)
tools/asset-pipeline/: pack.mjs  pack.test.mjs
tools/avatar-pipeline/: avatar-transforms.json  extract.mjs
tools/item-import/: demo-items.json  import.mjs  import.test.mjs  parse-item.mjs  parse-recipes.mjs
(+109 files in other folders)
