[package]
name = "harmony-glitch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "extract-swf"
path = "src/bin/extract_swf.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
swf = "0.2"
png = "0.17"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
jpeg-decoder = "0.3"
harmony-crypto = { path = "../../harmony/crates/harmony-crypto" }
harmony-identity = { path = "../../harmony/crates/harmony-identity" }
harmony-reticulum = { path = "../../harmony/crates/harmony-reticulum" }
harmony-zenoh = { path = "../../harmony/crates/harmony-zenoh" }
socket2 = { version = "0.5", features = ["all"] }
rand = "0.8"
hex = "0.4"
rand_core = "0.6"
zeroize = "1"
percent-encoding = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
