[package]
name = "harmony-glitch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "extract-swf"
path = "src/bin/extract_swf/main.rs"
required-features = ["extract-swf"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"
swf = { version = "0.2", optional = true }
png = { version = "0.17", optional = true }
flate2 = { version = "1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
jpeg-decoder = { version = "0.3", optional = true }

harmony-crypto = { path = "../../harmony/crates/harmony-crypto" }
harmony-identity = { path = "../../harmony/crates/harmony-identity" }
harmony-reticulum = { path = "../../harmony/crates/harmony-reticulum" }
harmony-zenoh = { path = "../../harmony/crates/harmony-zenoh" }
socket2 = { version = "0.5", features = ["all"] }
rand = "0.8"
hex = "0.4"
rand_core = "0.6"
zeroize = "1"
percent-encoding = "2"

[features]
extract-swf = ["swf", "png", "flate2", "clap", "jpeg-decoder"]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
